--- a/OpenGLStudy/OpenGLStudy.vcxproj
+++ b/OpenGLStudy/OpenGLStudy.vcxproj
@@ -76,7 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\OpenGLStudy\header;$(SolutionDir)Dependencies\glfw\include;$(SolutionDir)Dependencies\glew\include;$(SolutionDir)Dependencies\glad\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\OpenGLStudy\header;$(SolutionDir)Dependencies\glfw\include;$(SolutionDir)Dependencies\glew\include;$(SolutionDir)Dependencies\glad\include;$(SolutionDir)Dependencies</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>GLEW_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -100,7 +100,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\OpenGLStudy\header;$(SolutionDir)Dependencies\glfw\include;$(SolutionDir)Dependencies\glew\include;$(SolutionDir)Dependencies\glad\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\OpenGLStudy\header;$(SolutionDir)Dependencies\glfw\include;$(SolutionDir)Dependencies\glew\include;$(SolutionDir)Dependencies\glad\include;$(SolutionDir)Dependencies</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>GLEW_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -133,15 +133,19 @@
     <ClCompile Include="src\lesson\OpenGLLesson.cpp" />
     <ClCompile Include="src\lesson\OpenGLLessonFactory.cpp" />
     <ClCompile Include="src\opengl\factory\PositionColorGraphicComponentsFactory.cpp" />
+    <ClCompile Include="src\opengl\factory\TwoDTextureGraphicComponentFactory.cpp" />
     <ClCompile Include="src\opengl\RenderEngine.cpp" />
     <ClCompile Include="src\opengl\shader\Shader.cpp" />
     <ClCompile Include="src\opengl\shader\ShaderProgram.cpp" />
+    <ClCompile Include="src\opengl\texture\TwoDTexture.cpp" />
     <ClCompile Include="src\opengl\vertex\EBO.cpp" />
+    <ClCompile Include="src\opengl\vertex\TwoDTextureVAO.cpp" />
     <ClCompile Include="src\opengl\vertex\PositionColorVAO.cpp" />
     <ClCompile Include="src\opengl\vertex\VAO.cpp" />
     <ClCompile Include="src\opengl\vertex\VAOBuilder.cpp" />
     <ClCompile Include="src\opengl\vertex\VBO.cpp" />
     <ClCompile Include="src\utilities\FileParser.cpp" />
+    <ClCompile Include="src\utilities\ImageLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\lesson\LearnOpenGLLesson.h" />
@@ -151,20 +155,26 @@
     <ClInclude Include="header\lesson\OpenGLLesson.h" />
     <ClInclude Include="header\opengl\factory\GraphicComponentsFactory.h" />
     <ClInclude Include="header\opengl\factory\PositionColorGraphicComponentsFactory.h" />
+    <ClInclude Include="header\opengl\factory\TwoDTextureGraphicComponentFactory.h" />
     <ClInclude Include="header\opengl\RenderEngine.h" />
     <ClInclude Include="header\opengl\shader\Shader.h" />
     <ClInclude Include="header\opengl\shader\ShaderProgram.h" />
+    <ClInclude Include="header\opengl\texture\TwoDTexture.h" />
     <ClInclude Include="header\opengl\vertex\EBO.h" />
+    <ClInclude Include="header\opengl\vertex\TwoDTextureVAO.h" />
     <ClInclude Include="header\opengl\vertex\PositionColorVAO.h" />
     <ClInclude Include="header\opengl\vertex\VAO.h" />
     <ClInclude Include="header\opengl\vertex\VAOBuilder.h" />
     <ClInclude Include="header\opengl\vertex\VAOType.h" />
     <ClInclude Include="header\opengl\vertex\VBO.h" />
     <ClInclude Include="header\utilities\FileParser.h" />
+    <ClInclude Include="header\utilities\ImageLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\position_color_fragment.shader" />
     <None Include="res\shaders\position_color_vertex.shader" />
+    <None Include="res\shaders\two_d_texture_fragment.shader" />
+    <None Include="res\shaders\two_d_texture_vertex.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
